--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  tag:
+  version:
     runs-on: ubuntu-latest
     outputs:
       new_version: ${{ steps.tag.outputs.new_version }}
@@ -23,7 +23,7 @@ jobs:
         dry_run: true
   macos:
     runs-on: macos-latest
-    needs: tag
+    needs: version
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -37,7 +37,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
       env:
-        REVISION: ${{ needs.tag.outputs.new_version }}
+        REVISION: ${{ needs.version.outputs.new_version }}
       run: |
         wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.2.0/graalvm-ce-java11-darwin-amd64-20.2.0.tar.gz
         tar xzf graalvm-ce-java11-darwin-amd64-20.2.0.tar.gz
@@ -60,7 +60,7 @@ jobs:
         path: target/artifacts
   ubuntu:
     runs-on: ubuntu-latest
-    needs: tag
+    needs: version
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -74,7 +74,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
       env:
-        REVISION: ${{ needs.tag.outputs.new_version }}
+        REVISION: ${{ needs.version.outputs.new_version }}
       run: |
         wget -q https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-20.2.0/graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
         tar xzf graalvm-ce-java11-linux-amd64-20.2.0.tar.gz
@@ -99,7 +99,7 @@ jobs:
         path: target/artifacts
   windows:
     runs-on: windows-latest
-    needs: tag
+    needs: version
     env:
       VCVARS_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat
     steps:
@@ -119,7 +119,7 @@ jobs:
       shell: cmd
       env:
         JAVA_HOME: C:\Program Files\GraalVM\graalvm-ce-java11-20.2.0
-        REVISION: ${{ needs.tag.outputs.new_version }}
+        REVISION: ${{ needs.version.outputs.new_version }}
       run: |
         call "%JAVA_HOME%\bin\gu" install native-image
         call "%VCVARS_BAT%"
@@ -135,7 +135,7 @@ jobs:
         path: target/artifacts
   release:
     runs-on: ubuntu-latest
-    needs: [tag, macos, ubuntu, windows]
+    needs: [version, macos, ubuntu, windows]
     steps:
     - uses: actions/checkout@v1
     - name: Download all workflow run artifacts
@@ -152,8 +152,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ needs.tag.outputs.new_version }}
-        release_name: Release ${{ needs.tag.outputs.new_version }}
+        tag_name: ${{ needs.version.outputs.new_version }}
+        release_name: Release ${{ needs.version.outputs.new_version }}
         draft: true
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
