Use correct tag name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,7 +152,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ needs.version.outputs.new_version }}
+        tag_name: ${{ needs.version.outputs.new_tag }}
         release_name: Release ${{ needs.version.outputs.new_version }}
         draft: true
     - name: Upload Release Asset
