--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,3 +183,8 @@ jobs:
         asset_path: ./macos.zip
         asset_name: macos.zip
         asset_content_type: application/zip
+    - uses: eregon/publish-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        release_id: ${{ steps.create_release.outputs.id }}
