Change job name to linux

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         name: newlinechecker-artifacts-${{ github.job }}
         path: target/artifacts
-  ubuntu:
+  linux:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
