--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,7 +140,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Download all workflow run artifacts
       uses: actions/download-artifact@v2
+      with:
+        path: ./target
     - name: Build project
+      working-directory: target
       run: |
         zip -r windows.zip newlinechecker-artifacts-windows-${{ github.sha }}/
         zip -r linux.zip newlinechecker-artifacts-linux-${{ github.sha }}/
@@ -162,7 +165,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./linux.zip
+        asset_path: ./target/linux.zip
         asset_name: linux.zip
         asset_content_type: application/zip
     - name: Upload Release Asset
@@ -171,7 +174,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./windows.zip
+        asset_path: ./target/windows.zip
         asset_name: windows.zip
         asset_content_type: application/zip
     - name: Upload Release Asset
@@ -180,7 +183,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./macos.zip
+        asset_path: ./target/macos.zip
         asset_name: macos.zip
         asset_content_type: application/zip
     - uses: eregon/publish-release@v1
