--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,7 +166,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./target/linux.zip
-        asset_name: linux.zip
+        asset_name: newlinechecker-linux-${{ needs.version.outputs.new_version }}.zip
         asset_content_type: application/zip
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
@@ -175,7 +175,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./target/windows.zip
-        asset_name: windows.zip
+        asset_name: newlinechecker-windows-${{ needs.version.outputs.new_version }}.zip
         asset_content_type: application/zip
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
@@ -184,7 +184,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./target/macos.zip
-        asset_name: macos.zip
+        asset_name: newlinechecker-macos-${{ needs.version.outputs.new_version }}.zip
         asset_content_type: application/zip
     - uses: eregon/publish-release@v1
       env:
