--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,14 @@
 
     <profiles>
         <profile>
-            <id>mac</id>
+            <id>macos</id>
             <activation>
                 <os>
                     <family>mac</family>
                 </os>
             </activation>
             <properties>
-                <platform>mac</platform>
+                <platform>macos</platform>
             </properties>
         </profile>
         <profile>
@@ -203,7 +203,7 @@
         </plugins>
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings 
+                <!--This plugin's configuration is used to store Eclipse m2e settings
                     only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
