--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -145,9 +145,12 @@ jobs:
     - name: Build project
       working-directory: target
       run: |
-        zip -r windows.zip newlinechecker-artifacts-windows-${{ github.sha }}/
-        zip -r linux.zip newlinechecker-artifacts-linux-${{ github.sha }}/
-        zip -r macos.zip newlinechecker-artifacts-macos-${{ github.sha }}/
+        mv -f newlinechecker-artifacts-windows-${{ github.sha }} newlinechecker-windows-${{ needs.version.outputs.new_version }}
+        mv -f newlinechecker-artifacts-linux-${{ github.sha }} newlinechecker-linux-${{ needs.version.outputs.new_version }}
+        mv -f newlinechecker-artifacts-macos-${{ github.sha }} newlinechecker-macos-${{ needs.version.outputs.new_version }}
+        zip -r windows.zip newlinechecker-windows-${{ needs.version.outputs.new_version }}/
+        zip -r linux.zip newlinechecker-linux-${{ needs.version.outputs.new_version }}/
+        zip -r macos.zip newlinechecker-macos-${{ needs.version.outputs.new_version }}/
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
