--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -117,3 +117,29 @@ jobs:
       with:
         name: newlinechecker-artifacts-${{ github.job }}-${{ github.sha }}
         path: target/artifacts
+  deploy:
+    needs: [macos, linux, windows]
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '11'
+    - name: Cache Maven packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+    - name: Publish to GitHub Packages Apache Maven
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REVISION: ${{ github.sha }}
+      run: |
+        ./mvnw \
+          --batch-mode \
+          --settings ./.mvn/github-packages-settings.xml \
+          -Dsha1="${GITHUB_SHA}" \
+          -Drevision="${REVISION}" \
+          -DaltDeploymentRepository="github::default::https://maven.pkg.github.com/${GITHUB_REPOSITORY}" \
+          deploy
