--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -42,7 +42,7 @@ jobs:
         cp target/newlinechecker-* target/artifacts
     - uses: actions/upload-artifact@v1
       with:
-        name: newlinechecker-artifacts-${{ github.job }}-${{ github.sha }}
+        name: newlinechecker-${{ github.job }}-${{ github.sha }}
         path: target/artifacts
   linux:
     runs-on: ubuntu-latest
@@ -80,7 +80,7 @@ jobs:
         cp target/newlinechecker-* target/artifacts
     - uses: actions/upload-artifact@v1
       with:
-        name: newlinechecker-artifacts-${{ github.job }}-${{ github.sha }}
+        name: newlinechecker-${{ github.job }}-${{ github.sha }}
         path: target/artifacts
   windows:
     runs-on: windows-latest
@@ -115,7 +115,7 @@ jobs:
         copy target\newlinechecker-* target\artifacts
     - uses: actions/upload-artifact@v1
       with:
-        name: newlinechecker-artifacts-${{ github.job }}-${{ github.sha }}
+        name: newlinechecker-${{ github.job }}-${{ github.sha }}
         path: target/artifacts
   deploy:
     needs: [macos, linux, windows]
