--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           --batch-mode \
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${REVISION}" \
-          package
+          verify
         "./target/newlinechecker-macos-${REVISION}"
         upx --brute "target/newlinechecker-macos-${REVISION}"
         "./target/newlinechecker-macos-${REVISION}"
@@ -85,7 +85,7 @@ jobs:
           --batch-mode \
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${REVISION}" \
-          package
+          verify
         "./target/newlinechecker-linux-${REVISION}"
         # see https://github.com/upx/upx/issues/405#issuecomment-688342502
         # re-add upx when updating from graalvm 20.2.0 to 20.3.0
@@ -123,7 +123,7 @@ jobs:
       run: |
         call "%JAVA_HOME%\bin\gu" install native-image
         call "%VCVARS_BAT%"
-        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.mvn\github-actions-windows-maven-settings.xml  package
+        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.mvn\github-actions-windows-maven-settings.xml  verify
         .\target\newlinechecker-windows-%REVISION%.exe
         upx --brute target/newlinechecker-windows-%REVISION%.exe
         .\target\newlinechecker-windows-%REVISION%.exe
