--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>4.1.4</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
