--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -105,7 +105,7 @@ jobs:
       run: |
         call "%JAVA_HOME%\bin\gu" install native-image
         call "%VCVARS_BAT%"
-        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.mvn\github-actions-windows-maven-settings.xml  verify
+        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.github\github-actions-windows-maven-settings.xml  verify
         .\target\newlinechecker-windows-%REVISION%.exe
         upx --brute target/newlinechecker-windows-%REVISION%.exe
         .\target\newlinechecker-windows-%REVISION%.exe
