--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
                 <configuration>
                     <mainClass>${mainClass}</mainClass>
                     <executable>${env.JAVA_HOME}/bin/java</executable>
