--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -124,6 +124,7 @@ jobs:
   deploy:
     needs: [macos, linux, windows]
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v1
