--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -151,7 +151,7 @@ jobs:
   deploy:
     needs: [macos, linux, windows]
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' && !startsWith(github.ref, 'refs/heads/dependabot/') }}
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v1
