--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: GraalVM CI Main
 
 on:
   push:
-    branches:
-      - master
-
+  schedule:
+  - cron: 50 6 21 * *
 env:
   GRAALVM_VERSION: 21.0.0.2
 
@@ -39,7 +38,7 @@ jobs:
   version:
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.tag.outputs.new_version }}
+      new_version: ${{ steps.output.outputs.new_version }}
     steps:
     - uses: actions/checkout@v2.3.4
       with:
@@ -47,10 +46,16 @@ jobs:
         fetch-depth: 0
     - name: Bump version and push tag
       id: tag
+      if: ${{ github.ref == 'refs/heads/master' }}
       uses: mathieudutour/github-tag-action@v5.4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         release_branches: master,main
+    - id: output
+      env:
+        NEW_VERSION: ${{ steps.tag.outputs.new_version}}
+      run: |
+        echo "::set-output name=new_version::${NEW_VERSION:-$GITHUB_SHA}"
   macos:
     runs-on: macos-latest
     needs: version
@@ -165,6 +170,7 @@ jobs:
         name: newlinechecker-${{ github.job }}-${{ needs.version.outputs.new_version }}
         path: target/artifacts
   release:
+    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     needs: [version, macos, linux, windows]
     steps:
@@ -222,7 +228,8 @@ jobs:
       with:
         release_id: ${{ steps.create_release.outputs.id }}
   deploy:
-    needs: [version, release]
+    needs: [version, macos, linux, windows]
+    if: ${{ github.event_name == 'push' && !startsWith(github.ref, 'refs/heads/dependabot/') }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2.3.4
