--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,8 @@ jobs:
   macos:
     runs-on: macos-latest
     needs: version
+    env:
+      REVISION: ${{ needs.version.outputs.new_version }}
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v2
@@ -77,21 +79,25 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: install native-image module
+      run: gu install native-image
+    - name: install upx
+      run: brew install upx
     - name: Build with Maven
-      env:
-        REVISION: ${{ needs.version.outputs.new_version }}
       run: |
         set -o xtrace
-        gu install native-image
-        brew install upx
         ./mvnw \
           --batch-mode \
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${REVISION}" \
           verify
+    - name: Test and compress executable
+      run: |
         "./target/${{ env.ARTIFACT }}-macos-${REVISION}"
         upx "target/${{ env.ARTIFACT }}-macos-${REVISION}"
         "./target/${{ env.ARTIFACT }}-macos-${REVISION}"
+    - name: Move artifacts
+      run: |
         mkdir target/artifacts
         cp target/${{ env.ARTIFACT }}-* target/artifacts
     - uses: actions/upload-artifact@v2.2.4
@@ -101,6 +107,8 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     needs: version
+    env:
+      REVISION: ${{ needs.version.outputs.new_version }}
     steps:
     - uses: actions/checkout@v2.3.4
     - uses: actions/setup-java@v2
@@ -118,22 +126,27 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build with Maven
-      env:
-        REVISION: ${{ needs.version.outputs.new_version }}
+    - name: install native-image module
+      run: gu install native-image
+    - name: install upx
       run: |
-        set -o xtrace
         wget -q https://github.com/upx/upx/releases/download/v3.96/upx-3.96-amd64_linux.tar.xz
         tar xf upx-3.96-amd64_linux.tar.xz
-        gu install native-image
+    - name: Build with Maven
+      run: |
+        set -o xtrace
         ./mvnw \
           --batch-mode \
           -Dsha1="${GITHUB_SHA}" \
           -Drevision="${REVISION}" \
           verify
+    - name: Test and compress executable
+      run: |
         "./target/${{ env.ARTIFACT }}-linux-${REVISION}"
         ./upx-3.96-amd64_linux/upx "target/${{ env.ARTIFACT }}-linux-${REVISION}"
         "./target/${{ env.ARTIFACT }}-linux-${REVISION}"
+    - name: Move artifacts
+      run: |
         mkdir target/artifacts
         cp target/${{ env.ARTIFACT }}-* target/artifacts
     - uses: actions/upload-artifact@v2.2.4
@@ -144,6 +157,7 @@ jobs:
     runs-on: windows-latest
     needs: version
     env:
+      REVISION: ${{ needs.version.outputs.new_version }}
       VCVARS_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat
     steps:
     - uses: actions/checkout@v2.3.4
@@ -163,19 +177,25 @@ jobs:
         path: .m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    - name: install native-image module
+      run: gu install native-image
+    - name: install upx
+      run: brew install upx
     - name: Build with Maven
       shell: cmd
-      env:
-        REVISION: ${{ needs.version.outputs.new_version }}
       run: |
         call "%JAVA_HOME%\bin\gu" install native-image
         call "%VCVARS_BAT%"
-        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.github\github-actions-windows-maven-settings.xml  verify
-        .\target\${{ env.ARTIFACT }}-windows-%REVISION%.exe
-        upx target/${{ env.ARTIFACT }}-windows-%REVISION%.exe
-        .\target\${{ env.ARTIFACT }}-windows-%REVISION%.exe
-        mkdir target\artifacts
-        copy target\${{ env.ARTIFACT }}-* target\artifacts
+        call .\mvnw --batch-mode -Dsha1="%GITHUB_SHA%" -Drevision="%REVISION%" --settings .\.github\github-actions-windows-maven-settings.xml verify
+    - name: Test and compress executable
+      run: |
+        "./target/${{ env.ARTIFACT }}-windows-%REVISION%.exe"
+        upx "target/${{ env.ARTIFACT }}-windows-%REVISION%.exe"
+        "./target/${{ env.ARTIFACT }}-windows-%REVISION%.exe"
+    - name: Move artifacts
+      run: |
+        mkdir target/artifacts
+        cp target/${{ env.ARTIFACT }}-* target/artifacts
     - uses: actions/upload-artifact@v2.2.4
       with:
         name: ${{ env.ARTIFACT }}-${{ github.job }}-${{ needs.version.outputs.new_version }}
