--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,7 +170,6 @@ jobs:
       with:
         graalvm: ${{ env.GRAALVM_VERSION }}
         java: 'java11'
-    - run: choco install upx --version=3.96 --no-progress
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
       with:
@@ -180,7 +179,7 @@ jobs:
     - name: Install native-image module
       run: gu install native-image
     - name: Install upx
-      run: brew install upx
+      run: choco install upx --version=3.96 --no-progress
     - name: Build with Maven
       shell: cmd
       run: |
