--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,6 +7,8 @@ on:
     branches: [ master,main ]
   schedule:
     - cron: '32 8 * * 4'
+env:
+  JAVA_VERSION: 17
 
 jobs:
   debug:
@@ -44,7 +46,7 @@ jobs:
       uses: actions/checkout@v2.3.5
     - uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: ${{ env.JAVA_VERSION }}
         distribution: 'adopt'
     - name: Cache Maven packages
       uses: actions/cache@v2.1.6
