update resource config for manifest file

--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,9 +1,11 @@
 {
-  "resources":[
+  "resources":{
+  "includes":[
     {"pattern":"\\Qorg/slf4j/impl/StaticLoggerBinder.class\\E"}, 
     {"pattern":"org/eclipse/jgit/internal/JGitText.properties"}, 
-    {"pattern":"org/slf4j/impl/StaticLoggerBinder.class"}
-  ],
+    {"pattern":"org/slf4j/impl/StaticLoggerBinder.class"},
+    {"pattern":"\\QMETA-INF/MANIFEST.MF\\E"}
+  ]},
   "bundles":[
     {"name":"org.eclipse.jgit.internal.JGitText"}
   ]
