--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -175,7 +175,7 @@ jobs:
       uses: egor-tensin/vs-shell@v2
     - name: Build with Maven
       run: |
-        .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" --settings .\.github\github-actions-windows-maven-settings.xml verify
+        .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" verify
     - name: Test and compress executable
       run: |
         "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe"
