--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,9 +91,24 @@ jobs:
           verify
     - name: Test and compress executable
       run: |
-        "./target/${{ env.ARTIFACT }}-macos-${REVISION}"
+        expectedOutput="chorito version ""$env:REVISION"""
+        firstOutput=$("./target/${{ env.ARTIFACT }}-macos-${REVISION}" --version)
         upx "target/${{ env.ARTIFACT }}-macos-${REVISION}"
-        "./target/${{ env.ARTIFACT }}-macos-${REVISION}"
+        secondOutput=$("./target/${{ env.ARTIFACT }}-macos-${REVISION}" --version)
+        if [ $firstOutput != $expectedOutput ]; then
+          echo "The first output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $firstOutput
+          exit 1
+        fi
+        if [ $secondOutput != $expectedOutput ]; then 
+          echo "The second output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $secondOutput
+          exit 1
+        fi
     - name: Move artifacts
       run: |
         mkdir target/artifacts
@@ -137,9 +152,24 @@ jobs:
           verify
     - name: Test and compress executable
       run: |
-        "./target/${{ env.ARTIFACT }}-linux-${REVISION}"
+        expectedOutput="chorito version ""$env:REVISION"""
+        firstOutput=$("./target/${{ env.ARTIFACT }}-linux-${REVISION}" --version)
         ./upx-3.96-amd64_linux/upx "target/${{ env.ARTIFACT }}-linux-${REVISION}"
-        "./target/${{ env.ARTIFACT }}-linux-${REVISION}"
+        secondOutput=$("./target/${{ env.ARTIFACT }}-linux-${REVISION}" --version)
+        if [ $firstOutput != $expectedOutput ]; then
+          echo "The first output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $firstOutput
+          exit 1
+        fi
+        if [ $secondOutput != $expectedOutput ]; then 
+          echo "The second output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $secondOutput
+          exit 1
+        fi
     - name: Move artifacts
       run: |
         mkdir target/artifacts
@@ -178,9 +208,24 @@ jobs:
         .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" verify
     - name: Test and compress executable
       run: |
-        "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe"
+        $expectedOutput = "chorito version `"$env:REVISION`"`r`n"
+        $firstOutput = & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --% "--version" | Out-String
         upx "target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe"
-        "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe"
+        $secondOutput = & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --% "--version" | Out-String
+        if ($firstOutput -ne $expectedOutput) {
+          echo "The first output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $firstOutput
+          exit 1
+        }
+        if ($secondOutput -ne $expectedOutput) {
+          echo "The second output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $secondOutput
+          exit 1
+        }
     - name: Move artifacts
       run: |
         mkdir target/artifacts
