correct expected output

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,7 +91,7 @@ jobs:
           verify
     - name: Test and compress executable
       run: |
-        expectedOutput="chorito version ""${REVISION}"""
+        expectedOutput="${ARTIFACT} version \"${REVISION}\""
         firstOutput=$("./target/${ARTIFACT}-macos-${REVISION}" --version)
         upx "target/${ARTIFACT}-macos-${REVISION}"
         secondOutput=$("./target/${ARTIFACT}-macos-${REVISION}" --version)
@@ -152,7 +152,7 @@ jobs:
           verify
     - name: Test and compress executable
       run: |
-        expectedOutput="chorito version ""${REVISION}"""
+        expectedOutput="${ARTIFACT} version \"${REVISION}\""
         firstOutput=$("./target/${ARTIFACT}-linux-${REVISION}" --version)
         ./upx-3.96-amd64_linux/upx "target/${ARTIFACT}-linux-${REVISION}"
         secondOutput=$("./target/${ARTIFACT}-linux-${REVISION}" --version)
@@ -210,7 +210,7 @@ jobs:
         .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" verify
     - name: Test and compress executable
       run: |
-        $expectedOutput = "chorito version `"$env:REVISION`"`r`n"
+        $expectedOutput = "${ARTIFACT} version `"$env:REVISION`"`r`n"
         $firstOutput = & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --% "--version" | Out-String
         upx "target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe"
         $secondOutput = & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --% "--version" | Out-String
