--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,7 +86,15 @@ jobs:
           verify
     - name: Test executable
       run: |
-        "./target/${ARTIFACT}-macos-${REVISION}" --version
+        expectedOutput="${ARTIFACT} version \"${REVISION}\""
+        actualOutput=$("./target/${ARTIFACT}-macos-${REVISION}" --version)
+        if [ "$actualOutput" != "$expectedOutput" ]; then
+          echo "The output is wrong. Expected:"
+          echo "$expectedOutput"
+          echo "Got:"
+          echo "$actualOutput"
+          exit 1
+        fi
     - name: Move artifacts
       run: |
         mkdir target/artifacts
@@ -121,7 +129,15 @@ jobs:
           verify
     - name: Test executable
       run: |
-        "./target/${ARTIFACT}-linux-${REVISION}" --version
+        expectedOutput="${ARTIFACT} version \"${REVISION}\""
+        actualOutput=$("./target/${ARTIFACT}-linux-${REVISION}" --version)
+        if [ "$actualOutput" != "$expectedOutput" ]; then
+          echo "The output is wrong. Expected:"
+          echo "$expectedOutput"
+          echo "Got:"
+          echo "$actualOutput"
+          exit 1
+        fi
     - name: Move artifacts
       run: |
         mkdir target/artifacts
@@ -153,7 +169,15 @@ jobs:
         .\mvnw --batch-mode -Dsha1="$env:GITHUB_SHA" -Drevision="$env:REVISION" verify
     - name: Test executable
       run: |
-        & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --version
+        $expectedOutput = "${{ env.ARTIFACT }} version `"$env:REVISION`"`r`n"
+        $actualOutput = & "./target/${{ env.ARTIFACT }}-windows-$env:REVISION.exe" --% "--version" | Out-String
+        if ($actualOutput -ne $expectedOutput) {
+          echo "The output is wrong. Expected:"
+          echo $expectedOutput
+          echo "Got:"
+          echo $actualOutput
+          exit 1
+        }
     - name: Move artifacts
       run: |
         mkdir target/artifacts
