--- a/pom.xml
+++ b/pom.xml
@@ -85,10 +85,17 @@
 						<artifactId>native-maven-plugin</artifactId>
 						<executions>
 							<execution>
+								<id>build-native</id>
 								<goals>
 									<goal>compile-no-fork</goal>
 								</goals>
 								<phase>package</phase>
+							</execution>
+							<execution>
+								<id>test-native</id>
+								<goals>
+									<goal>test</goal>
+								</goals>
 							</execution>
 						</executions>
 						<configuration>
