chore: apply zizmor and actionlint fixes

--- a/.github/workflows/chores.yaml
+++ b/.github/workflows/chores.yaml
@@ -7,7 +7,7 @@ on:
     - chores
   schedule:
   - cron: '42 3 13 * *'
-
+permissions: {}
 concurrency: chores
 
 jobs:
@@ -50,12 +50,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4.2.2
+      with:
+        persist-credentials: false
     - name: Chores
       run: |
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/ArloL/chorito/HEAD/run-latest.sh)"
         git diff
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v7.0.6
+      uses: peter-evans/create-pull-request@v7.0.7
       with:
         commit-message: "chore: automated changes by chorito"
         branch: "chorito/patch"
