--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,24 +1,5 @@
 {
-  "resources":{
-  "includes":[{
-    "pattern":"\\QMETA-INF/MANIFEST.MF\\E"
-  }, {
-    "pattern":"\\QMETA-INF/services/java.lang.System$LoggerFinder\\E"
-  }, {
-    "pattern":"\\QMETA-INF/services/java.time.zone.ZoneRulesProvider\\E"
-  }, {
-    "pattern":"\\QMETA-INF/services/java.util.spi.ResourceBundleControlProvider\\E"
-  }, {
-    "pattern":"\\QMETA-INF/services/org.slf4j.spi.SLF4JServiceProvider\\E"
-  }, {
-    "pattern":"\\Qorg/slf4j/impl/StaticLoggerBinder.class\\E"
-  }, {
-    "pattern":"org/eclipse/jgit/internal/JGitText.properties"
-  }, {
-    "pattern":"org/slf4j/impl/StaticLoggerBinder.class"
-  }]},
-  "bundles":[{
-    "name":"org.eclipse.jgit.internal.JGitText",
-    "locales":["", "und"]
-  }]
+    "resources": {
+        "includes": []
+    }
 }
