--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,12 +74,11 @@ jobs:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
         persist-credentials: false
-    - uses: graalvm/setup-graalvm@2a2412009026a83f51d179f92dc2b3fd4c8142df # v1.4.1
+    - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
       with:
-        java-version-file: .java-version
+        java-version-file: .tool-versions
         distribution: graalvm
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        cache: 'maven'
+        cache: maven
     - name: Build with Maven
       run: |
         set -o xtrace
@@ -110,12 +109,11 @@ jobs:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
         persist-credentials: false
-    - uses: graalvm/setup-graalvm@2a2412009026a83f51d179f92dc2b3fd4c8142df # v1.4.1
+    - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
       with:
-        java-version-file: .java-version
+        java-version-file: .tool-versions
         distribution: graalvm
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        cache: 'maven'
+        cache: maven
     - name: Build with Maven
       run: |
         set -o xtrace
@@ -146,12 +144,11 @@ jobs:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       with:
         persist-credentials: false
-    - uses: graalvm/setup-graalvm@2a2412009026a83f51d179f92dc2b3fd4c8142df # v1.4.1
+    - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
       with:
-        java-version-file: .java-version
+        java-version-file: .tool-versions
         distribution: graalvm
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        cache: 'maven'
+        cache: maven
     - name: Remove WindowsImageHeapProviderFeature
       run: '& 7z d "$env:JAVA_HOME\lib\svm\builder\svm.jar" com/oracle/svm/core/windows/WindowsImageHeapProviderFeature.class'
     - name: Build with Maven
@@ -259,9 +256,9 @@ jobs:
         persist-credentials: false
     - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
       with:
-        java-version-file: .java-version
-        distribution: temurin
-        cache: 'maven'
+        java-version-file: .tool-versions
+        distribution: graalvm
+        cache: maven
     - name: Publish to GitHub Packages Apache Maven
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
