--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -283,14 +283,14 @@ jobs:
     - name: Make sure build did not change anything
       run: git diff --exit-code
   required-status-check:
-    name: "${{ github.workflow }}.required-status-check"
+    name: "main.required-status-check"
     needs:
     - macos
     - linux
     - windows
     runs-on: ubuntu-latest
     steps:
-    - run: echo "This is just a workflow to use as the required status check"
+    - run: echo "Use this job as the required status check of this workflow"
   trigger-livecheck:
     needs: release
     runs-on: ubuntu-latest
